# swlogs

./: CHANGES.txt  countbotswindow.py  pyproject.toml  setup.cfg
migrations/: migration0.sql  migration1.py  migration1.sql
swlogs/: access_logs.py  commandline.py  common.py  countbots.py  loglogs.py  plots.py  swreports.py  ua_regex.py
swlogs/data/: ip16.sql  ip24.sql  ip32.sql  log-bots.sql
swlogs/migrations/: load_from_sqlite.py  migration0.sql  migration1.sql  migration2.sql
tests/: common.py  test_commandline.py  test_count_bots.py  test_database.py  test_loglogs.py  test_plots.py  test_swreports.py
tests/data/swreport/: bots.csv  chrome-w10-b.txt  daily-bots.txt  daily-ip16.txt  daily-ip24.txt  daily-ip32.txt  daily-overall.txt  ip16.csv  ip24.csv  ip32.csv  overall.csv  yesterday-bots.txt
