[metadata]
name = swlogs
version = 0.0.9post1
author = 'John Evans'
author_email = "John Evans" <john.evans8@montana.edu>
license = 'MIT'
long_description_content_type = text/markdown
long_description = 
    Analyze scholarworks log files.

url = https://github.com/johnevans8msu/swlogs.git
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    matplotlib
    pandas
    sqlalchemy
    pg8000
    testing.postgresql
    pyyaml
python_requires = >=3.12
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
	loglogs = swlogs.commandline:loglogs
	swreport = swlogs.commandline:swreport
	swplot = swlogs.commandline:plot

[options.package_data]
swlogs = 
    data/*.sql

[options.packages.find]
exclude =
    tests
    tests.*
